tests/pp-fail/bad_undef2.fl.0.exp
Error: bad_undef2.fl(3,1): 'Foo' is not defined
